修正圖片連結、壓縮圖片檔案

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -295,7 +295,7 @@ header.header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(img/admin/loginCover.png) ;
+    background-image: url(img/admin/loginCover.jpg) ;
     background-size: cover;
     background-position: center right;
     height:100vh;
